--- a/spring4WithSpringBoot/springmvc/src/main/resources/templates/products.html
+++ b/spring4WithSpringBoot/springmvc/src/main/resources/templates/products.html
@@ -39,6 +39,11 @@
 				</tr>
 			</table>
 		</div>
+		<div class="row">
+		   <div class="col-sm-3">
+		   		<a href="/product/new">New Product</a>
+		   </div>
+		</div>
 	</div>
 </body>
 </html>
